--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
-<form id="test-form">
-  
-  <div>
-    <label>Field 1</label>
-    <input type="text" name="form_field_1" placeholder="Field 1"/>
-  </div>
-
-  <div>
-    <label>Field 2</label>
-    <input type="text" name="form_field_2" placeholder="Field 2"/>
-  </div>
-  
-  <div>
-    <label>Field 3</label>
-    <input type="text" name="form_field_3" placeholder="Field 3"/>
-  </div>
-  
-  <div>
-    <label>Field 4</label>
-    <input type="text" name="form_field_4" placeholder="Field 4"/>
-  </div>
-
-  <div>
-    <button type="submit"id="submit-form">Submit</button>
-  </div>
-
+<form name="submit-to-google-sheet">
+  <input name="email" type="email" placeholder="Email" required>
+  <button type="submit">Send</button>
 </form>
+
+<script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbylkcmm57shJ1jVFnBeVM3N9ktlU9XDTT8mtdwCAyT_uyoLdfU/exec'
+  const form = document.forms['submit-to-google-sheet']
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
